import "health.proto";

message RegisterRequest {
    required string userId = 1;
    required string password = 2;
    required string email = 3;
}

message RegisterResponse {
}

service Register {
    rpc Register(RegisterRequest) returns (RegisterResponse);
}

message HealthCheckRequest {
    optional string service = 1;
}
  